2016-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (shm_ring_sem_wait): Return -1 if the shm-ring
	  is cancelled
	* device-src/xfer-dest-taper-splitter.c: s/!!/!/

2016-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Improve error message
	* common-src/shm-ring.c (shm_ring_sem_wait): Faile only if the process
	  do not exists (ESRCH)
	* device-src/xfer-dest-taper-splitter.c: Improve debugging
	* perl/Amanda/Taper/Scribe.pm: Set started_writing only when we wrote
	  a part
	* server-src/dumper.c: Improve debugging
	* xfer-src/element-glue.c: Improve debugging
	* xfer-src/xfer.c: Improve debugging

2016-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtrmlog.c: Remove bogus g_free

2016-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (debug_pgets): Untaint the returned string
	* server-src/amtrmlog.c: Fix coverity warning

2016-05-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/pp-scripts.pl: Use amrandom to get consistent size

2016-05-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amtrmlog.c: Use free_dump_hash()
	* server-src/find.c (free_dump_hash): Put in comment because infailon
	  some machine

2016-05-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amrmtape.pl: Can remove multiple labels
	* man/xml-source/amrmtape.8.xml: Document new feature

2016-05-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c: Fix dtimeout when using shm-ring (local auth)

2016-05-17  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c (debug_pgets): New function to read a complete
	  line from a FILE*
	* common-src/file.h (debug_pgets, pgets): Add prototypes
	* common-src/amxml.c: Undo previous patch, use pgets instead of agets
	* application-src/amstar.c, client-src/client_util.c,
	  client-src/selfcheck.c, client-src/sendbackup.c,